Fix: icons positioning, letter spacing

--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -278,9 +278,6 @@
         max-width: 640px
       &__text
         margin-bottom: 42px
-    &-profile
-      &__image
-        margin-left: 14px
 
   .cta
     padding-top: 80px
@@ -689,6 +686,7 @@
         margin-bottom: 24px
         font-size: 28px
         line-height: 44px
+        letter-spacing: 1px
 
   .footer
     padding-top: 48px
