--- a/sass/blocks/index/_faq.sass
+++ b/sass/blocks/index/_faq.sass
@@ -133,6 +133,7 @@
       border-top: 1px solid rgba(#E5EAF4, 0.7)
       .fa-minus, .fa-plus
         width: 11px
+        margin-top: 8px
       .fa-minus
         display: none
       .fa-plus
