--- a/sass/blocks/index/_reviews.sass
+++ b/sass/blocks/index/_reviews.sass
@@ -33,7 +33,7 @@
       font-size: 40px
       line-height: 60px
       text-align: center
-      letter-spacing: 0.22px
+      letter-spacing: -0.25px
       color: #B3BAC5
       word-break: break-word
   &-profile
@@ -62,7 +62,7 @@
       margin: 0
       font-style: italic
       font-weight: normal
-      font-size: 14px
+      font-size: 13px
       line-height: 19px
       color: #5A7184
       word-break: break-word
